# boost.rules.tools

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  SuperTool.py  boostGenerator.py  depsGen.py  diffCreator.py  requirements.txt  super_tool.py  tools.bzl
Tools/: InitialiseForDev.py  PatchAndHash.py  TidyForCommit.py  TidyUp.py  helper.py  utils.py
old/: diffCreator.py  sourcePatch.py
